Fix line length
Part of #30, #31

--- a/test/testdata/bibliography.yaml
+++ b/test/testdata/bibliography.yaml
@@ -17,7 +17,7 @@ references:
     page: 365-375
     volume: '17'
     issue: '7'
-    keyword: file system, PDP-11, operating system, command language, time-sharing
+    keyword: file system, PDP-11, operating system, command language
     URL: https://doi.org/10.1145/361011.361061
     DOI: 10.1145/361011.361061
     ISSN: 0001-0782
