--- a/.github/workflows/releasetracker.yml
+++ b/.github/workflows/releasetracker.yml
@@ -7,11 +7,11 @@ on:
 
 jobs:
   update-release-tags:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
 
       - name: Check out code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2.3.1
         with:
           fetch-depth: 0
 
