--- a/.github/workflows/shlinttest.yml
+++ b/.github/workflows/shlinttest.yml
@@ -10,24 +10,24 @@ on:
 jobs:
 
   shellcheck:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
 
       - name: Check out code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2.3.1
 
       - name: Run shellcheck
         uses: bewuethr/shellcheck-action@v2
 
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
 
       - name: Check out code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2.3.1
 
       - name: Get Bats repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2.3.1
         with:
           repository: bats-core/bats-core
           ref: v1.2.0
