--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -20,4 +20,5 @@ jobs:
         env:
           VALIDATE_ALL_CODEBASE: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VALIDATE_MARKDOWN: true
           VALIDATE_YAML: true
