--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v2.3.3
+        with:
+          fetch-depth: 0
       - name: Lint code base
         uses: github/super-linter@v3.12.0
         env:
