Set multi-status

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -27,3 +27,4 @@ jobs:
           ACTIONS_RUNNER_DEBUG: true
           OUTPUT_FORMAT: tap
           OUTPUT_DETAILS: detailed
+          MULTI_STATUS: true
