--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -19,7 +19,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_MARKDOWN: true
           VALIDATE_YAML: true
-          ACTIONS_RUNNER_DEBUG: true
-          OUTPUT_FORMAT: tap
-          OUTPUT_DETAILS: detailed
-          MULTI_STATUS: true
+          VALIDATE_CSS: true
