--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -22,4 +22,5 @@ jobs:
           VALIDATE_CSS: true
           VALIDATE_JSON: true
           VALIDATE_LUA: true
+          VALIDATE_BASH: true
           VALIDATE_BASH_EXEC: true
