--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -24,3 +24,4 @@ jobs:
           VALIDATE_LUA: true
           VALIDATE_BASH: true
           VALIDATE_BASH_EXEC: true
+          VALIDATE_SHELL_SHFMT: true
