--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -12,10 +12,12 @@ jobs:
     name: Lint code base
     runs-on: ubuntu-20.04
     steps:
+
       - name: Check out repository
         uses: actions/checkout@v2.3.4
         with:
           fetch-depth: 0
+
       - name: Lint code base
         uses: github/super-linter/slim@v4.8.1
         env:
@@ -27,6 +29,7 @@ jobs:
           VALIDATE_BASH_EXEC: true
           VALIDATE_CSS: true
           VALIDATE_GITHUB_ACTIONS: true
+          VALIDATE_GITLEAKS: true
           VALIDATE_JSCPD: true
           VALIDATE_JSON: true
           VALIDATE_LUA: true
