--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,29 +1,31 @@
 name: Lint code base
 
 on:
+  workflow_dispatch:
   push:
     branches:
-      - '**'
-    tags-ignore:
-      - '**'
+      - main
+  pull_request:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref }}
+  cancel-in-progress: true
 
 jobs:
   lint:
     name: Lint code base
     runs-on: ubuntu-20.04
-    steps:
 
+    steps:
       - name: Check out repository
         uses: actions/checkout@v3.0.0
-        with:
-          fetch-depth: 0
 
       - name: Lint code base
         uses: github/super-linter/slim@v4.9.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BRANCH: main
-          VALIDATE_ALL_CODEBASE: true
+          VALIDATE_ALL_CODEBASE: ${{ github.event_name == 'push' }}
 
           VALIDATE_BASH: true
           VALIDATE_BASH_EXEC: true
