--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,21 +1,29 @@
 name: Testing
 
 on:
+  workflow_dispatch:
   push:
     branches:
-      - '**'
-    tags-ignore:
-      - '**'
+      - main
+  pull_request:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref }}
+  cancel-in-progress: true
 
 jobs:
-
   test:
     name: Run BATS tests
     runs-on: ubuntu-20.04
-    steps:
 
+    steps:
       - name: Check out code
         uses: actions/checkout@v3.0.0
+
+      - name: Install Pandoc
+        uses: r-lib/actions/setup-pandoc@v2.1.3
+        with:
+          pandoc-version: '2.10'
 
       - name: Get Bats repository
         uses: actions/checkout@v3.0.0
@@ -24,22 +32,21 @@ jobs:
           ref: v1.2.1
           path: bats-core
 
-      - name: Install Bats and adjust PATH
+      - name: Install dependencies
         run: |
+          echo "::group::Install BATS"
           cd bats-core
           ./install.sh "$HOME"
           printf '%s\n' "$HOME/bin" "$HOME/.local/bin" >> "$GITHUB_PATH"
+          echo "::endgroup::"
 
-      - name: Install Pandoc
-        uses: r-lib/actions/setup-pandoc@v1
-        with:
-          pandoc-version: '2.10'
+          echo "::group::Install graphviz"
+          sudo apt-get install graphviz
+          echo "::endgroup::"
 
-      - name: Install graphviz
-        run: sudo apt-get install graphviz
-
-      - name: Install inotify-tools
-        run: sudo apt-get install inotify-tools
+          echo "::group::Install inotify-tools"
+          sudo apt-get install inotify-tools
+          echo "::endgroup::"
 
       - name: Run tests
         run: bats --tap test
