--- a/.github/workflows/addtoproject.yml
+++ b/.github/workflows/addtoproject.yml
@@ -14,8 +14,14 @@ jobs:
     name: Add issues and PRs
     runs-on: ubuntu-20.04
     steps:
-      - name: Add issue or PR
+      - name: Add issue or PR to pbb project
         uses: actions/add-to-project@v0.0.3
         with:
           project-url: https://github.com/users/bewuethr/projects/2
+          github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
+      - name: Add issues to hobbyist project
+        if: github.event_name == 'issues'
+        uses: actions/add-to-project@v0.0.3
+        with:
+          project-url: https://github.com/users/bewuethr/projects/1
           github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
