Switch to reusable release tracker workflow

--- a/.github/workflows/releasetracker.yml
+++ b/.github/workflows/releasetracker.yml
@@ -5,24 +5,7 @@ on:
     tags:
       - v[0-9]+.[0-9]+.[0-9]+
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref }}
-  cancel-in-progress: true
-
 jobs:
   update-release-tags:
     name: Update release tags
-    runs-on: ubuntu-20.04
-
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v3.0.2
-        with:
-          fetch-depth: 0
-
-      - name: Update release tags for latest major and minor releases
-        uses: bewuethr/release-tracker-action@v1.4.3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          update-minor: false
+    uses: bewuethr/workflows/.github/releasetracker.yml@main
