--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,9 +21,9 @@ jobs:
         uses: actions/checkout@v4.2.2
 
       - name: Install Pandoc
-        uses: r-lib/actions/setup-pandoc@v2.10.1
+        uses: pandoc/actions/setup@v1.1.0
         with:
-          pandoc-version: 3.1.6.1
+          version: 3.5
 
       - name: Get Bats repository
         uses: actions/checkout@v4.2.2
