--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,25 +21,22 @@ jobs:
         uses: actions/checkout@v4.2.2
 
       - name: Install Pandoc
-        uses: r-lib/actions/setup-pandoc@v2.10.1
+        uses: pandoc/actions/setup@v1.1.0
         with:
-          pandoc-version: 3.1.6.1
+          version: 3.5
 
-      - name: Get Bats repository
-        uses: actions/checkout@v4.2.2
+      - name: Install Bats
+        id: setup-bats
+        uses: bats-core/bats-action@3.0.0
         with:
-          repository: bats-core/bats-core
-          ref: v1.11.0
-          path: bats-core
+          bats-version: v1.11.0
+          support-path: ${{ github.workspace }}/tests/bats-support
+          assert-path: ${{ github.workspace }}/tests/bats-assert
+          detik-path: ${{ github.workspace }}/tests/bats-detik
+          file-path: ${{ github.workspace }}/tests/bats-file
 
-      - name: Install dependencies
+      - name: Install other dependencies
         run: |
-          echo "::group::Install BATS"
-          cd bats-core
-          ./install.sh "$HOME"
-          printf '%s\n' "$HOME/bin" "$HOME/.local/bin" >> "$GITHUB_PATH"
-          echo "::endgroup::"
-
           echo "::group::Install graphviz"
           sudo apt-get install graphviz
           echo "::endgroup::"
@@ -49,4 +46,6 @@ jobs:
           echo "::endgroup::"
 
       - name: Run tests
+        env:
+          BATS_LIB_PATH: ${{ steps.setup-bats.outputs.lib-path }}
         run: bats --tap test
