--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,8 @@ jobs:
       - name: Install Pandoc
         uses: pandoc/actions/setup@v1.1.1
         with:
-          version: 3.7.0.2
+          # version: 3.7.0.2
+          version: 3.1.5
 
       - name: Install Bats
         id: setup-bats
